# process-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  sample_config.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: build.yml
bindings/: listener.h
cbindgen-base/: Cargo.toml
cbindgen-base/src/: lib.rs
common-ffi/: Cargo.toml  build.rs
common-ffi/src/: lib.rs
include/: error.hpp  fs.hpp  io.hpp  path.hpp  pch.hpp  result.hpp
include/linux/: fs.hpp  pch.hpp
include/win32/: fs.hpp  path.hpp  pch.hpp
linux-listener/: Cargo.toml  README.md  linux_listener.h
linux-listener/linux-listener/: Cargo.toml  build.rs
linux-listener/linux-listener-common/: Cargo.toml  build.rs
linux-listener/linux-listener-common/src/: lib.rs  linux.rs  types.rs
linux-listener/linux-listener-ebpf/: Cargo.toml
linux-listener/linux-listener-ebpf/src/: main.rs
linux-listener/linux-listener/src/: cli.rs  epoll.rs  lib.rs  main.rs
process-monitor/: CMakeLists.txt
process-monitor/include/: config.hpp  cpu.hpp  loop.hpp  utils.hpp
process-monitor/src/: cta.cpp  ctb.cpp
process-monitor/src/linux/: config.cpp  cpu.cpp  cta.cpp  foo.cpp  utils.cpp
process-monitor/src/win32/: config.cpp  cpu.cpp  cta.cpp  foo.cpp  utils.cpp
process_monitor/: CMakeLists.txt
process_monitor/include/: listener.h  listener.hpp  types.hpp
rust-common/: Cargo.toml
rust-common/cbindgen-base/: Cargo.toml
rust-common/ffi/: Cargo.toml  build.rs
rust-common/ffi/src/: lib.rs
rust-common/ffi/src/linux/: mod.rs
rust-common/ffi/src/win32/: event.rs  message.rs  mod.rs  mpsc.rs
scripts/: install.bat  monitor.json  setup.bat  setup.py  setup.sh
src/: config_storage.hpp  cta.cpp  ctb.cpp  error.cpp  fs.cpp  io.cpp  json_parser.hpp  main.cpp  process_monitor.hpp  protocol.hpp
src/linux/: fs.cpp
src/linux/fs/: native_dir_builder.cpp  native_file.cpp  native_file_type.cpp  native_open_options.cpp
src/win32/: fs.cpp  path.cpp
src/win32/fs/: native_dir_builder.cpp  native_file.cpp  native_file_type.cpp  native_metadata.cpp  native_open_options.cpp
syslib/: CMakeLists.txt  Doxyfile
syslib/include/: error.hpp  fs.hpp  io.hpp  net.hpp  pch.hpp  process.hpp  result.hpp  sys.hpp  thread.hpp
syslib/include/linux/: fs.hpp  net.hpp  pch.hpp
syslib/include/win32/: fs.hpp  handle.hpp  net.hpp  path.hpp  pch.hpp
syslib/src/: error.cpp  fs.cpp  io.cpp  net.cpp
syslib/src/linux/: fs.cpp  io.cpp  net.cpp  process.cpp  sys.cpp
syslib/src/linux/fs/: native_dir_entry.cpp  native_file.cpp  native_metadata.cpp  native_open_options.cpp  native_read_dir.cpp
syslib/src/win32/: fs.cpp  handle.cpp  io.cpp  net.cpp  path.cpp  process.cpp  sys.cpp
syslib/src/win32/fs/: native_dir_builder.cpp  native_dir_entry.cpp  native_file.cpp  native_open_options.cpp  native_read_dir.cpp
syslib/tests/: CMakeLists.txt  fs.cpp  net.cpp
tests/: CMakeLists.txt  fs.cpp
windows-listener/: Cargo.toml  Makefile.toml  windows_listener.inx
windows-listener/src/: config.rs  displayer.rs  error.rs  lib.rs  log.rs  mpsc.rs  state.rs
windows-listener/src/handlers/: driver_entry.rs  driver_unload.rs  mod.rs  process_notify.rs
windows-listener/src/handlers/irp/: create.rs  mod.rs  read.rs
windows-listener/src/handlers/irp/ioctl/: memory_cleanup.rs  memory_initialize.rs  mod.rs
windows-listener/src/wrappers/: bindings.rs  mod.rs  phantom.rs  safety.rs
windows-listener/windows-listener/: Cargo.toml  build.rs
windows-listener/windows-listener-driver/: Cargo.toml  build.rs  windows_listener_driver.inx
windows-listener/windows-listener-driver/src/: config.rs  error.rs  lib.rs  log.rs  mpsc.rs  state.rs
windows-listener/windows-listener-driver/src/handlers/: driver.rs  driver_entry.rs  driver_unload.rs  minifilter.rs  mod.rs  process_notify.rs  wfp.rs
windows-listener/windows-listener-driver/src/handlers/irp/: cleanup.rs  close.rs  create.rs  mod.rs
windows-listener/windows-listener-driver/src/handlers/irp/ioctl/: clear_monitor.rs  memory_cleanup.rs  memory_initialize.rs  mod.rs  set_monitor.rs
windows-listener/windows-listener-driver/src/wrappers/: bindings.rs  event.rs  irql.rs  lock.rs  mod.rs  object.rs  safety.rs  strings.rs  user_object.rs  wfp.rs
windows-listener/windows-listener-wfp/: windows-listener-wfp.sln
windows-listener/windows-listener-wfp-driver/: windows-listener-wfp-driver.sln
windows-listener/windows-listener-wfp-driver/windows-listener-wfp-driver/: driver.c  windows-listener-wfp-driver.inf  windows-listener-wfp-driver.vcxproj  windows-listener-wfp-driver.vcxproj.filters
windows-listener/windows-listener-wfp/windows-listener-wfp/: windows-listener-wfp.vcxproj  windows-listener-wfp.vcxproj.filters  wl_wfp.c  wl_wfp.h
windows-listener/windows-listener/src/: lib.rs
