[package]
name = "common-ffi"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
aya = ["dep:aya", "std", "aya-ebpf"]
aya-ebpf = ["dep:aya-ebpf"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true }
aya-ebpf = { git = "https://github.com/aya-rs/aya", optional = true }

[build-dependencies]
anyhow = "1.0.100"
cbindgen-base = { path = "../cbindgen-base" }
