[workspace]
resolver = "2"
members = [
    "linux-listener",
    "linux-listener-common",
    "linux-listener-ebpf",
]
default-members = ["linux-listener", "linux-listener-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
clap = { version = "4.5.51", default-features = false, features = ["std"] }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
simplelog = "0.12.2"
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.linux-listener-ebpf]
debug = 2
codegen-units = 1
