[workspace]
resolver = "2"
members = ["cbindgen-base", "ffi"]
default-members = ["cbindgen-base", "ffi"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
cbindgen = { version = "0.29.2", default-features = false }
wdk-sys = { version = "0.5.1", default-features = false }

[workspace.lints.clippy]
absolute_paths = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
elidable_lifetime_names = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
manual_instant_elapsed = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
suboptimal_flops = "warn"
too_many_arguments = "allow"
trait_duplication_in_bounds = "warn"
use_self = "warn"
wildcard_imports = "warn"
