[workspace]
resolver = "2"
members = ["windows-listener", "windows-listener-driver"]
default-members = ["windows-listener"]

[workspace.package]
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
cbindgen-base = { path = "../rust-common/cbindgen-base", default-features = false }
ffi = { path = "../rust-common/ffi", default-features = false }
log = { version = "0.4.22", default-features = false }
lru = { version = "0.16.2", default-features = false }
postcard = { version = "1.1.3", default-features = false }
simplelog = { version = "0.12.2", default-features = false }
wdk = { version = "0.4.1", default-features = false }
wdk-alloc = { version = "0.4.1", default-features = false }
wdk-build = { version = "0.5.1", default-features = false }
wdk-panic = { version = "0.4.1", default-features = false }
wdk-sys = { version = "0.5.1", default-features = false }
windows = { version = "0.62.2", default-features = false }

[workspace.lints.clippy]
absolute_paths = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
elidable_lifetime_names = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
manual_instant_elapsed = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
suboptimal_flops = "warn"
too_many_arguments = "allow"
trait_duplication_in_bounds = "warn"
use_self = "warn"
wildcard_imports = "warn"

[profile.dev]
debug = true
panic = "abort"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = "abort"
strip = true
