[package]
name = "linux-listener-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
std = []
aya = ["dep:aya", "std"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cbindgen = { workspace = true }

[lints]
workspace = true
