[package]
name = "linux-listener-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
linux-listener-common = { path = "../linux-listener-common" }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "linux-listener"
path = "src/main.rs"

[lints]
workspace = true
