[package]
name = "linux-listener-ebpf"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
ffi = { workspace = true, features = ["linux-kernel"] }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "linux-listener"
path = "src/main.rs"

[lints]
workspace = true
