[package]
name = "ffi"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
linux-user = ["dep:aya", "std", "linux-kernel"]
linux-kernel = []

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true }

[build-dependencies]
anyhow = "1.0.100"
cbindgen-base = { path = "../cbindgen-base" }
