[package]
name = "windows-listener-driver"
version = "0.1.0"
edition = "2024"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]

[dependencies]
ouroboros = "0.18.5"
postcard = { version = "1.1.3", features = ["alloc"] }
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-panic = "0.3.1"
wdk-sys = "0.4.0"

[build-dependencies]
wdk-build = "0.4.0"

[lints]
workspace = true
