[package]
name = "windows-listener-driver"
version = "0.1.0"
edition = "2024"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]

[dependencies]
ffi = { workspace = true, features = ["win32-kernel"] }
ouroboros = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
wdk = { workspace = true, features = ["alloc"] }
wdk-alloc = { workspace = true }
wdk-panic = { workspace = true }
wdk-sys = { workspace = true }

[build-dependencies]
wdk-build = { workspace = true }

[lints]
workspace = true
