[package]
name = "windows-listener-driver"
version = "0.1.0"
edition = "2024"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]

[dependencies]
ffi = { workspace = true, features = ["win32-kernel"] }
lru = { workspace = true, features = ["hashbrown"] }
postcard = { workspace = true, features = ["alloc"] }
wdk = { workspace = true, features = ["alloc"] }
wdk-alloc = { workspace = true }
wdk-panic = { workspace = true }
wdk-sys = { workspace = true }

# The reason we use `windows` here is because `wdk-sys` has yet to have bindings for minifilter
# APIs (fltkernel.h). Hopefully one day any of these PRs will get merged?
# - https://github.com/microsoft/windows-drivers-rs/pull/337
# - https://github.com/microsoft/windows-drivers-rs/pull/359
# See also `windows::Wdk` vs `wdk-sys`: https://github.com/microsoft/windows-drivers-rs/discussions/20
windows = { workspace = true, features = [
    "Win32_Security",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Power",
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem_Minifilters",
    "Wdk_System_SystemServices",
] }

[build-dependencies]
wdk-build = { workspace = true }

[lints]
workspace = true
